<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".controller.activities.AddTaskActivity">

    <TextView
        android:id="@+id/txtTitleActivity"
        android:layout_width="336dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/newTask"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTextTitleTask"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/corner_radius_edittext"
        android:ems="10"
        android:hint="@string/titleTask"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLength="30"
        android:padding="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleActivity" />

    <EditText
        android:id="@+id/edtDescriptionTask"
        android:layout_width="336dp"
        android:layout_height="300dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/corner_radius_edittext"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/descriptionTask"
        android:inputType="textPersonName"
        android:maxLength="300"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextTitleTask"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="161dp"
        android:layout_height="38dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/corner_radius_edittext"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="date"
        android:maxLines="1"
        android:padding="5dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescriptionTask"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtTime"
        android:layout_width="161dp"
        android:layout_height="38dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/corner_radius_edittext"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/time"
        android:inputType="date"
        android:maxLines="1"
        android:padding="5dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescriptionTask"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveTask"
        android:layout_width="134dp"
        android:layout_height="55dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/corner_radius_button"
        android:text="@string/saveTask"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDate" />


</androidx.constraintlayout.widget.ConstraintLayout>